<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>se.deversity.async-test-lib</groupId>
    <artifactId>async-example-cache-concurrency</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>
    <name>Async Test Lib - Cache Concurrency Example</name>
    <description>Demonstrates CacheConcurrencyDetector: unsynchronized HashMap used as a shared cache</description>
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>6.1.3</junit.version>
        <async-test-lib.version>1.9.8</async-test-lib.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>se.deversity.async-test-lib</groupId>
            <artifactId>async-test-lib</artifactId>
            <version>${async-test-lib.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.6</version>
                <configuration>
                    <systemPropertyVariables>
                        <license.mock.mode>true</license.mock.mode>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
